# ts-parser-registry

./: Cargo.toml
src/: main.rs
