[package]
name = "ts-parser-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oci-distribution = "0.9.4"
futures = "0.3.28"
clap = { version = "4.2.1", features = ["derive"] }
anyhow = "1.0.70"
cc = "1.0.79"
log = "0.4"
pretty_env_logger = "0.4"
